add payment with details and testing for it and some changes in project